--- a/html5 cm css3 - aula1/exemplo02.html
+++ b/html5 cm css3 - aula1/exemplo02.html
@@ -11,13 +11,13 @@
     <ul>
         <li>jooj</li>
         <li>suus</li>
-        <li>foda-se?</li>
+        <li>fss?</li>
     </ul>
     <h1>Listas do balacobaco organizado</h1>
     <ol>
         <li>jooj</li>
         <li>suus</li>
-        <li>foda-se?</li>
+        <li>fsss?</li>
     </ol>
 
     <h1>Lista que define o balacobaco</h1>
