--- a/html5 cm css3 - aula1/exemplo03.html
+++ b/html5 cm css3 - aula1/exemplo03.html
@@ -36,7 +36,7 @@
                             <header>
                                 <h2>Programa mais barato de nova iguaçu</h2>
                             </header>
-                            <p>Linguagem de putinhas é o nosso idioma</p>
+                            <p>Linguagem  é o nosso idioma</p>
                         </article>
                     </section>
         </main>
